--- a/site/src/css/custom.css
+++ b/site/src/css/custom.css
@@ -58,11 +58,11 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 html[data-theme="dark"] {
-  --ifm-background-color: #180425;
-  --ifm-navbar-background-color: #180425;
-  --ifm-background-color-primary: #200830;
-  --ifm-background-color-secondary: #180425;
-  --ifm-border-color: #45364e;
+  --ifm-background-color: #121218;
+  --ifm-navbar-background-color: #121218;
+  --ifm-background-color-primary: #18181f;
+  --ifm-background-color-secondary: #121218;
+  --ifm-border-color: #2a2a35;
   --ifm-toc-border-color: var(--ifm-border-color);
 
   --ifm-link-color: #6effd1;
